--- a/network/gate_config.json
+++ b/network/gate_config.json
@@ -1,7 +1,7 @@
 {
-    "hidden_dims": [4, 8, 2],
+    "hidden_dims": [256, 128, 64],
     "lambda_":     0.5,
     "lr":          0.01,
-    "use_dummy":   true,
+    "use_dummy":   false,
     "epochs":      100
 }
