--- a/network/gate_config.json
+++ b/network/gate_config.json
@@ -1,7 +1,10 @@
 {
-    "hidden_dims": [256, 128, 64],
-    "lambda_":     0.5,
-    "lr":          0.01,
-    "use_dummy":   false,
-    "epochs":      100
+    "hidden_dims":      [128, 64],
+    "lambda_":          0.5,
+    "lr":               0.01,
+    "use_dummy":        false,
+    "epochs":           100,
+    "remove_rt_thresh": 1,
+    "log":              false,
+    "scale":            true
 }
